networking/lab-03-network-policies/manifests/07-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: netpol-demo
spec:
  selector:
    app: database
  ports:
    - port: 80
      targetPort: 80
